<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_color_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <View
        android:id="@+id/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/food_water"
        android:textSize="22sp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/view_toolbar"
        app:layout_constraintStart_toStartOf="@id/view_toolbar"
        app:layout_constraintTop_toTopOf="@id/view_toolbar" />


    <ImageView
        android:id="@+id/ic_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="@id/view_toolbar"
        app:layout_constraintEnd_toEndOf="@id/view_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/view_toolbar"/>

    <ImageView
        android:id="@+id/ic_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calories"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/ic_water"
        app:layout_constraintTop_toBottomOf="@id/view_toolbar"
        app:layout_constraintStart_toStartOf="@id/view_toolbar"/>

    <ImageView
        android:id="@+id/ic_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_water"
        app:layout_constraintStart_toEndOf="@id/ic_calories"
        app:layout_constraintTop_toTopOf="@id/ic_calories"
        app:layout_constraintBottom_toBottomOf="@id/ic_calories"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_cookNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cook_now"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintTop_toBottomOf="@id/ic_calories"
        app:layout_constraintStart_toStartOf="@id/ic_calories"
        />

    <LinearLayout
        android:id="@+id/ll_showAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tv_cookNow"
        app:layout_constraintTop_toTopOf="@id/tv_cookNow"
        app:layout_constraintEnd_toEndOf="@id/ic_water">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/show_all"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ic_food_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_food1"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cookNow"
        app:layout_constraintStart_toStartOf="@id/tv_cookNow"/>

    <ImageView
        android:id="@+id/ic_food_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_food2"
        app:layout_constraintTop_toTopOf="@id/ic_food_1"
        app:layout_constraintBottom_toBottomOf="@id/ic_food_1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_food_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:fontFamily="@font/roboto"
        android:text="@string/desc_food_1"
        app:layout_constraintTop_toBottomOf="@id/ic_food_1"
        app:layout_constraintStart_toStartOf="@id/ic_food_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_food_2"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ic_food_2"
        app:layout_constraintStart_toStartOf="@id/ic_food_2"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_food_1"
        android:src="@drawable/bottom_sheet_dialog"/>





</androidx.constraintlayout.widget.ConstraintLayout>